syntax = "proto3";

option csharp_namespace = "PharmacyAPI.Protos";

message OrderProto{
	int32 PharmacyID = 1;
	int32 MedicationID = 2;
	int32 Quantity = 3;
	string ApiKey = 4;
}

message OrderResponseProto{
	bool response = 1;
}

message CheckMedicationAvailabilityProto{
	string Name = 1;
	int32 Quantity = 2;
	string ApiKey = 3;
}

message PharmacyProto{
	int64 Id = 1;
	string Name = 2;
	string City = 3;
	string Adress = 4;
	string AdressNumber = 5;
}

message AvailableMedicineProto{
	int64 Id = 1;
	string Name = 2;
}

message MedicationAvailabilityProto{
	PharmacyProto Pharmacy = 1;
	repeated AvailableMedicineProto Medications = 2;
}

message CheckMedicationAvailabilityResponseProto{
	repeated MedicationAvailabilityProto MedicationAvailability = 1;
}